# lauth

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  README.md  config.ru  docker-compose-api.yml  docker-compose-cli.yml  docker-compose.yml  lauth.gemspec  notes
.github/workflows/: branch-scratch.yml  branch-tests.yml  build-apache-latest.yml  build-api-latest.yml  build-api-main.yml  build-cli-latest.yml  build-cli-main.yml  build-db-latest.yml  build-lauth-latest.yml  build-production.yml  build-sync-latest.yml  ci.yml  delete-workflow-runs.yml  deploy-api-main.yml  deploy-staging.yml  gkostin.yml  main.yml
apache/: .gitignore  Dockerfile  README.md
apache/client/: .gitignore  meson.build  meson_options.txt
apache/client/include/lauth/: api_client.hpp  authorization_result.hpp  authorizer.hpp  http_client.hpp  http_headers.hpp  http_params.hpp  json.hpp  json_conversions.hpp  logging.hpp  request.hpp  request_info.hpp
apache/client/src/: api_check.cpp  http_check.cpp
apache/client/src/lauth/: api_client.cpp  authorization_result.cpp  authorizer.cpp  http_client.cpp
apache/client/test/: mock_service.cpp
apache/client/test/lauth/: api_client_test.cpp  authorization_result_test.cpp  authorizer_test.cpp  http_client_test.cpp  mock_service.cpp  mocks.hpp  request_info_test.cpp  request_test.cpp
apache/conf/: httpd.conf  lauth.conf  test-site.conf
apache/debpkgs/: package
apache/module/: Makefile  mod_lauth.cpp  modules.mk
apache/remoteuser/: Makefile  mod_authn_remoteuser.c  modules.mk
api/: .gitignore  Dockerfile  Dockerfile.prod  Gemfile  README.md  Rakefile  api.rb  config.ru  k8s-web.yml  settings.yml
api/config/: puma.rb  settings.yml
api/features/: authenticate.feature  clients.feature  collections.feature  groups.feature  institutions.feature  list_clients.feature  network.feature  query_networks.feature  users.feature
api/lauth/: entities.rb  repositories.rb
api/spec/: spec_helper.rb
app/: Dockerfile  Rakefile  VERSIONS.adoc
app/config/: app.rb
app/public/: manifest.webmanifest
app/spec/: hanami_helper.rb
cli/: .env  .gitignore  Dockerfile  Dockerfile.prod  Gemfile  README.md  cli.rb  lauth.rdoc  settings.yml
cli/app/: client.rb  create.rb  delete.rb  ipv4.rb  list.rb  query.rb  read.rb  update.rb
cli/features/: authorized.feature  clients.feature  crud_collections.feature  crud_institutions.feature  crud_network.feature  institutions.feature  ipv4.feature  list_clients.feature  query_networks.feature  user_authorization.feature  users.feature
cli/spec/: spec_helper.rb
db/: Dockerfile  README.md  delegation.sql  drop-keys.sql  keys.sql  network.sql  projection.sql  setup.sh  tables.sql  test-fixture.sql
db/sync/: Dockerfile  spark-defaults.conf  sync.sc
docs/db/: README.md  schema.plant
docs/decisions/: 0001-bdd-cucumber-ruby.md  0002-mariadb.md  0003-rest-api.md  0004-rom-for-data-layer.md  0005-hanami-api.md  (+2 more)
eg/: CITATION.cff  Dockerfile  Gemfile  README.adoc  docker-compose.yml
exe/: lauth  lauthd
kube/: README.md
lauth/: .env.development  .env.test  Dockerfile  Gemfile  Guardfile  README.md  compose.yml  package-lock.json  package.json
lib/: Gemfile  ip.rb  lauth.rb
module/: Dockerfile  Makefile  README.md  lauth.conf  mod_lauth.c  mod_lauth.cpp  modules.mk
sig/: lauth.rbs
spec/: lauth_spec.rb  spec_helper.rb
test/: .gitignore  .rspec  Dockerfile  Gemfile  README.md  spec_helper.rb
test-site/: README.md  htpasswd
(+370 files in other folders)
